# Tera-Launcher

./: CMakeLists.txt  README.md
config/: README.md  launcher.ini  login.html  patcher.ini
config/css/: box.css  fx.css  launcher.css  progress.css  select.css  spinner.css  style.css
config/js/: index.js  launcher.js  progress.js  slide.js
include/: allocation.h  bdecode.h  cef.h  config.h  crypt.h  error_codes.h  extension.h  file_info.h  handler.h  launcher.h  log.h  mapped_file.h  parser.h  patcher.h  patcher_callback.h  patcher_service.h  tera_zip_format.h  torrent.h  xml.h  xml_manifest_parser.h
include/utils/: function.h  pool.h  pool_win.h
rc/: Launcher.rc  resource.h
src/: allocation.cpp  bdecode.cpp  cef.cpp  file_info.cpp  handler.cpp  launcher.cpp  main.cpp  patcher.cpp  patcher_callback.cpp  patcher_service.cpp  xml_manifest_parser.cpp
win32/Release/: tera-launcher.exp
